# libusb_linux

./: CMakeLists.txt  _libusb.h  _libusbi.h  core.c  descriptor.c  hotplug.c  io.c  libusbi.h  linux_udev.c  linux_usbfs.c  poll_posix.c  strerror.c  sync.c  threads_posix.c
include/: libusb.h  libusbi.h  linux_usbfs.h  threads_posix.h  version.h
test/: xusb.c
